Created a nav bar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aptos Ecosystem - A Collection of Live Projects Within the Aptos Ecosystem</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@400;500&family=Montserrat&family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <img class="headerlogo" src="images/Aptos_Primary_WHT.svg" alt="Aptos Logo">
+        <nav class="nav-bar">
+            <ul class="nav-bar-ul">
+                <li><a class="nav-bar-anchor" href="#">Projects</a></li>
+                <li><a class="nav-bar-anchor" href="https://aptos.dev/" target="_blank">Develop</a></li>
+                <li><a class="nav-bar-anchor" href="#">About</a></li>
+            </ul>
+        </nav>
+
+        <button class="nav-bar-button"><a id="second-anchor" class="nav-bar-anchor" href="#">ADD YOUR PROJECT</a></button>
+
+    </header>
 
 
 
