Almost there in making nav bar responsive

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@400;500&family=Montserrat&family=Poiret+One&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <header>
         <img class="headerlogo" src="images/Aptos_Primary_WHT.svg" alt="Aptos Logo">
         <nav class="nav-bar">
             <ul class="nav-bar-ul">
-                <li><a class="nav-bar-anchor" href="#">Projects</a></li>
-                <li><a class="nav-bar-anchor" href="https://aptos.dev/" target="_blank">Develop</a></li>
-                <li><a class="nav-bar-anchor" href="#">About</a></li>
+                <li class="nav-hide"><a class="nav-bar-anchor" href="#">Projects</a></li>
+                <li class="nav-hide"><a class="nav-bar-anchor" href="https://aptos.dev/" target="_blank">Develop</a></li>
+                <li class="nav-hide"><a class="nav-bar-anchor" href="#">About</a></li>
             </ul>
         </nav>
 
-        <button class="nav-bar-button"><a id="second-anchor" class="nav-bar-anchor" href="#">ADD YOUR PROJECT</a></button>
-
+        <button class="nav-bar-button nav-hide"><a id="second-anchor" class="nav-bar-anchor" href="#">ADD YOUR PROJECT</a></button>
+         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars" style="color: #b4b4b4;"></i>
     </header>
-
 
 
 
