I did some changes and made the nav bar responsive

--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
 
 </head>
 <body>
-    <header>
-        <img class="headerlogo" src="images/Aptos_Primary_WHT.svg" alt="Aptos Logo">
-        <nav class="nav-bar">
-            <ul class="nav-bar-ul">
-                <li class="nav-hide"><a class="nav-bar-anchor" href="#">Projects</a></li>
-                <li class="nav-hide"><a class="nav-bar-anchor" href="https://aptos.dev/" target="_blank">Develop</a></li>
-                <li class="nav-hide"><a class="nav-bar-anchor" href="#">About</a></li>
-            </ul>
-        </nav>
-
-        <button class="nav-bar-button nav-hide"><a id="second-anchor" class="nav-bar-anchor" href="#">ADD YOUR PROJECT</a></button>
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars" style="color: #b4b4b4;"></i>
+    <header class="nav-bar">
+            <a class="img" href=""><img class="headerlogo" src="images/Aptos_Primary_WHT.svg" alt="Aptos Logo"></a>
+            <a class="nav-links" href="#">Projects</a></li>
+            <a class="nav-links" href="https://aptos.dev/" target="_blank">Develop</a></li>
+            <a class="nav-links" href="#">About</a></li>
+            <a id="button" class="nav-links" href="#">ADD YOUR PROJECT</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars" style="color: #b4b4b4;"></i>
     </header>
 
 
