Created cover page of the website and did some minor changes to nav bar

--- a/index.html
+++ b/index.html
@@ -7,22 +7,42 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@400;500&family=Montserrat&family=Poiret+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+<!-- Hamburger Menu Icon -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
+    <!-- NAV Bar -->
     <header class="nav-bar">
             <a class="img" href=""><img class="headerlogo" src="images/Aptos_Primary_WHT.svg" alt="Aptos Logo"></a>
-            <a class="nav-links" href="#">Projects</a></li>
+            <a class="nav-links" href="#section2">Projects</a></li>
             <a class="nav-links" href="https://aptos.dev/" target="_blank">Develop</a></li>
             <a class="nav-links" href="#">About</a></li>
-            <a id="button" class="nav-links" href="#">ADD YOUR PROJECT</a>
+            <a id="button" class="nav-links" href="https://github.com/aptos-foundation/ecosystem-projects#contribution-guidelines" target="_blank">ADD YOUR PROJECT</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars" style="color: #b4b4b4;"></i>
+                <i class="fa fa-bars" style="color: #b4b4b4;"></i></a>
     </header>
+    <!-- Main Section -->
+    <main>
+        <!-- Main Cover Page of the Website -->
+        <section id="section1" class="cover">
+            <h1 class="cover-h1">Explore Ecosystem Projects</h1>
+            <p class="cover-p1">A Collection of Live Ecosystem Projects within the Aptos Blockchain</p>
+            <button class="cover-button"><a class="cover-anchor" href="#section2">EXPLORE PROJECTS</a> </button>
+            
+        </section>
+
+        <!-- Ecosystem Projects using CSS Grid -->
+        <h1 style="text-align: center; color: rgb(180, 180, 180);">Ecosystem Projects</h1>
+        <hr>
+        <section id="section2" class="main-content">
+
+        </section>
 
 
+
+    </main>
 
 
     <script src="script.js"></script>
