Made a template for CSS Grid, almost done with it

--- a/index.html
+++ b/index.html
@@ -36,9 +36,22 @@
         <!-- Ecosystem Projects using CSS Grid -->
         <h1 style="text-align: center; color: rgb(180, 180, 180);">Ecosystem Projects</h1>
         <hr>
-        <section id="section2" class="main-content">
-
-        </section>
+        <div id="section2" class="main-content">
+            <div class="child grid-child">
+                <img src="https://file.notion.so/f/s/5eb0a9b5-e316-4094-a090-d2e02637a3ff/LayerZero_Logo_Icon.svg?id=afc4180a-d2bb-495c-8738-81793de8a270&table=block&spaceId=c681a46c-dbda-4853-b36e-c19abcbf93e6&expirationTimestamp=1688025605310&signature=z1RpTQf7pzWF71CfpdeQspwbLtOeJbEhjq6kIhN2J7s&downloadName=LayerZero_Logo_Icon.svg" alt="">
+                <h3>Layer Zero</h3>
+                <p> LAYERZERO ENABLES THE REALIZATION OF CROSS-CHAIN APPLICATIONS WITH A LOW LEVEL COMMUNICATION PRIMITIVE.</p>
+                <button><a href="https://layerzero.network/">Learn More</a></button>
+            </div>
+            <div class="child grid-child">Test</div>
+            <div class="child grid-child">TESt</div>
+            <div class="child grid-child">test</div>
+            <div class="child grid-child">test</div>
+            <div class="child grid-child">test</div>
+            <div class="child grid-child">test</div>
+            <div class="child grid-child">test</div>
+            <div class="child grid-child">test</div>
+        </div>
 
 
 
