Did some changes to grid section of the website and added 50% of the projects

--- a/index.html
+++ b/index.html
@@ -40,13 +40,40 @@
             <div class="child grid-child">
                 <img src="https://file.notion.so/f/s/5eb0a9b5-e316-4094-a090-d2e02637a3ff/LayerZero_Logo_Icon.svg?id=afc4180a-d2bb-495c-8738-81793de8a270&table=block&spaceId=c681a46c-dbda-4853-b36e-c19abcbf93e6&expirationTimestamp=1688025605310&signature=z1RpTQf7pzWF71CfpdeQspwbLtOeJbEhjq6kIhN2J7s&downloadName=LayerZero_Logo_Icon.svg" alt="">
                 <h3>Layer Zero</h3>
-                <p> LAYERZERO ENABLES THE REALIZATION OF CROSS-CHAIN APPLICATIONS WITH A LOW LEVEL COMMUNICATION PRIMITIVE.</p>
-                <button><a href="https://layerzero.network/">Learn More</a></button>
+                <p> LAYERZERO ENABLES THE REALIZATION OF CROSS-CHAIN APPLICATIONS WITH A LOW LEVEL COMMUNICATION PRIMITIVE</p>
+                <button><a href="https://layerzero.network/" target="_blank">Learn More</a></button>
             </div>
-            <div class="child grid-child">Test</div>
-            <div class="child grid-child">TESt</div>
-            <div class="child grid-child">test</div>
-            <div class="child grid-child">test</div>
+            <div class="child child-second grid-child">
+                <img src="/images/pancake_logo.svg" alt="pancake logo" style="margin-top: 35px;">
+                <br>
+                <br>
+                <h3>Pancakeswap</h3>
+                <p>PANCAKESWAP HELPS YOU MAKE THE MOST OUT OF YOUR CRYPTO IN THREE WAYS: <br>
+                    TRADE, EARN, AND WIN.</p>
+                    <br>
+                <button class="pancake"><a href="https://aptos.pancakeswap.finance/" target="_blank">Learn More</a></button>
+            </div>
+            <div class="child grid-child">
+                <img src="https://assets.website-files.com/60536b901b879c2f395d75d0/611a43033bc9a0cfa9ad417b_Vector-1.svg" alt="Pontem Logo">
+                <br>
+                <br>
+                <h3>Pontem Network</h3>
+                <p>Pontem is a product development studio building products with Move on Aptos</p>
+                    <br>
+                <button><a href="https://pontem.network/" target="_blank">Learn More</a></button>
+                
+            </div>
+            <div class="child grid-child">
+                <img src="images/notifi-logo-mark-light.svg" alt="Notifi Logo">
+                <br>
+                <br>
+                <h3>Notifi</h3>
+                <p>A suite of blockchain tools for notifications, real-time alerts, and growth marketing, designed to deliver a seamless Web3 experience.</p>
+                    <br>
+                <button><a href="https://notifi.network/main" target="_blank">Learn More</a></button>
+
+
+            </div>
             <div class="child grid-child">test</div>
             <div class="child grid-child">test</div>
             <div class="child grid-child">test</div>
