Some images were not being shown on github pages, tried to fix them

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <hr>
         <div id="section2" class="main-content">
             <div class="child grid-child">
-                <img src="https://file.notion.so/f/s/5eb0a9b5-e316-4094-a090-d2e02637a3ff/LayerZero_Logo_Icon.svg?id=afc4180a-d2bb-495c-8738-81793de8a270&table=block&spaceId=c681a46c-dbda-4853-b36e-c19abcbf93e6&expirationTimestamp=1688025605310&signature=z1RpTQf7pzWF71CfpdeQspwbLtOeJbEhjq6kIhN2J7s&downloadName=LayerZero_Logo_Icon.svg" alt="">
+                <img src="images/layer-zero.png" alt="LayerZero Logo">
                 <h3>Layer Zero</h3>
                 <p> LAYERZERO ENABLES THE REALIZATION OF CROSS-CHAIN APPLICATIONS WITH A LOW LEVEL COMMUNICATION PRIMITIVE</p>
                 <button class="grid-button"><a href="https://layerzero.network/" target="_blank">Learn More</a></button>
             </div>
             <div class="child child-second grid-child">
-                <img src="/images/pancake_logo.svg" alt="pancake logo" style="margin-top: 35px;">
+                <img src="images/pancake_logo.svg" alt="pancake logo" style="margin-top: 35px;">
                 <br>
                 <br>
                 <h3>Pancakeswap</h3>
@@ -96,7 +96,7 @@
                 
                 </div>
             <div class="child grid-child">
-                <img src="/images/moonpay_symbol_wht.svg" alt="MoonPay Logo">
+                <img src="images/moonpay_symbol_wht.svg" alt="MoonPay Logo">
                 <br>
                 <br>
                 <h3>MoonPay</h3>
@@ -108,7 +108,7 @@
             </div>
             <div class="child grid-child">
                 
-                <img src="/images/blockeden-xyz-logo.svg" alt="BlockEden Logo">
+                <img src="images/blockeden-xyz-logo.svg" alt="BlockEden Logo">
                 <br>
                 <br>
                 <h3>BlockEden</h3>
