Finalized the website with a button in ecosystem projects section and added a basic footer to the website

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <hr>
         <div id="section2" class="main-content">
             <div class="child grid-child">
-                <img src="images/layer-zero.png" alt="LayerZero Logo">
+                <img src="https://file.notion.so/f/s/5eb0a9b5-e316-4094-a090-d2e02637a3ff/LayerZero_Logo_Icon.svg?id=afc4180a-d2bb-495c-8738-81793de8a270&table=block&spaceId=c681a46c-dbda-4853-b36e-c19abcbf93e6&expirationTimestamp=1688284800000&signature=6gTKXiGyjVnTHk-fitnXL19H_Faye6hinb_7Yy2Xabw&downloadName=LayerZero_Logo_Icon.svg" alt="LayerZero Logo">
                 <h3>Layer Zero</h3>
                 <p> LAYERZERO ENABLES THE REALIZATION OF CROSS-CHAIN APPLICATIONS WITH A LOW LEVEL COMMUNICATION PRIMITIVE</p>
                 <button class="grid-button"><a href="https://layerzero.network/" target="_blank">Learn More</a></button>
@@ -118,14 +118,24 @@
                 </div>
                 
         </div>
-        <!-- <div class="main-content-button-container">
-            <button class="main-content-button"><a href="">EXPLORE ALL PROJECTS</a>
-            </button>
-        </div> -->
+        <div class="main-content-button-container">
+            <button class="main-content-button"><a href="https://github.com/aptos-foundation/ecosystem-projects" target="_blank">EXPLORE ALL PROJECTS</a>
+            </button>       </div>
     </section>
 
     </main>
 
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <h3>Made with Love by Ahmed M</h3>
+            <p><a href="https://github.com/ahmedmcodes" target="_blank">Check out My Github Profile</a></p>
+
+
+        </div>
+
+
+    </footer>
 
     <script src="script.js"></script>
 </body>
